k8s/cloudflared/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloudflare
  labels:
    neovara-external-secrets: "true"
